modif carrousel, ajout section culinaire
modif carrousel,
ajout section culinaire

--- a/canada.html
+++ b/canada.html
@@ -57,17 +57,22 @@
     <main id="canada-main">
         <section id="carousel" class="section-flex">
             <div class="pic-ctn">
-                <img src="image/canada/lacs.jpg" alt="" class="pic">
-                <img src="image/canada/niagara.jpg" alt="" class="pic">
-                <img src="image/canada/ottawa.jpg" alt="" class="pic">
-                <img src="image/canada/quebec.jpg" alt="" class="pic">
-                <img src="image/canada/toronto.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel01.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel02.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel03.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel04.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel05.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel06.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel07.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel08.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel09.jpg" alt="" class="pic">
+                <img src="image/canada/carrousel/carrousel10.jpg" alt="" class="pic">
               </div>
         </section>
 
         <section id="niagara" class="section-flex">
             <div class="article">
-                <h2><a href="https://niagarafallstours.com" target="_blank">Niagara Falls</a></h2>
+                <h2 class="test"><a href="https://niagarafallstours.com" target="_blank">Niagara Falls</a></h2>
                 <p>Les chutes du Niagara sont une merveille de la nature, situées à la frontière entre les USA et le Canada. Elles sont constituées de 3 chutes, dont la plus haute atteint 57 mètres. Plus que leur hauteur, c’est surtout leur largeur, leur puissance et leur débit d’eau (le plus important d’Amérique du Nord) qui rend les chutes si impressionnantes. Il est très facile de les observer depuis la rive, dont l’accès est gratuit.</p>
                 <p><br>En hiver, les Niagara Falls offrent un spectacle aussi magnifique que surprenant. La brume de l’eau se mêle aux parties gelées des chutes et aux diverses formations de glace le long des berges et sur la rivière.</p>
                 <p><br>Autre immanquable, le spectacle des chutes de nuit, puisque celles-ci sont éclairées par des projecteurs colorés. L’été, vous aurez également l’occasion d’admirer les feux d’artifices tous les vendredi et dimanche.</p>
@@ -76,7 +81,7 @@
 
         <section id="quebec" class="section-flex">
             <div class="article">
-                <h2>Quebec</h2>
+                <h2><a href="https://www.quebec-cite.com/fr" target="_blank">Québec</a></h2>
                 <p>La réputation de peuple chaleureux des Québécois n’est plus à faire. Partout, vous serez accueilli avec un grand sourire. Ici les gens sont heureux et fiers de leur culture francophone en Amérique.</p>
                 <p><br>Difficile de ne pas succomber aux charmes du Vieux-Québec, berceau de l'Amérique française et seule ville fortifiée au nord de Mexico. Profitez d’une balade à travers ses rues pavées de plus de 400 ans pour apprécier son patrimoine exceptionnel.</p>
                 <p><br>Grâce à la passion débordante de ses chefs émergents et établis, la scène gastronomique de Québec s’anime jour après jour. Ces artistes de la table réinventent avec doigté les classiques et développent de nouvelles tendances, mettant en valeur la proximité et les richesses du terroir local.</p>
@@ -86,7 +91,7 @@
 
         <section id="toronto" class="section-flex">
             <div class="article">
-                <h2>Toronto</h2>
+                <h2><a href="https://www.toronto.ca" target="_blank">Toronto</a></h2>
                 <p>L’aspect le plus séduisant de la culture torontoise se trouve peut-être dans sa vaste gamme de mets provenant de différentes parties du monde. Pour des plats canadiens, voyez la cuisine de St. Lawrence Market ou procurez-vous des aliments frais au marché fermier. Le centre-ville de Toronto offre nombre de choix fins, comme le bar à pâtes haut de gamme Scaramouche, qui demande habituellement une réservation. Avant de dîner, allez prendre un verre au chic Barchef, connu pour ses cocktails expérimentaux de belle allure.</p>
                 <p><br>La situation exceptionnelle de Toronto au bord du lac Ontario en fait un endroit où il est facile de passer du temps dehors. Les alentours de la ville offrent plusieurs adorables expériences dans la nature, avec les nombreux sentiers de l’aire de conservation Rattlesnake Point. Des promenades courtes et accessibles, menant à des points de vue extra-ordinaires, il s’agit d’ailleurs d’une des destinations d'escalade les plus populaires de l'Ontario. Le plus célèbre et ancien sentier du pays, Bruce Trail vaut pleinement le trajet hors de la ville.</p>
                 <p><br>La liste des choses à voir à Toronto semble infinie — les innombrables musées, sites historiques et épicentres culturels s’agrémentent de découvertes fortuites : art de rue coloré, musiciens de rue talentueux, boutiques excentriques...</p>
@@ -95,7 +100,7 @@
 
         <section id="ottawa" class="section-flex">
             <div class="article">
-                <h2>Ottawa</h2>
+                <h2><a href="https://ottawatourism.ca/en" target="_blank">Ottawa</a></h2>
                 <p>Établie comme capitale du Canada en 1857, alors qu’elle était à peine plus qu’un village, Ottawa est devenue l’une des villes les plus dynamiques et les plus intéressantes du Canada sans jamais perdre son charme de petite ville. </p>
                 <p><br>Avec un centre-ville accessible à pied, d’excellentes liaisons de transport en commun, une abondance de parcs, une culture de cafés et de restaurants en plein air, des gens extrêmement sympathiques et de belles banlieues rurales, il est facile de comprendre pourquoi Ottawa est l’une des capitales les plus appréciées au monde.</p>
                 <p><br>Les étés y sont chauds et les hivers froids (et longs), mais cela n’empêche personne de s’amuser. En fait, l’hiver est l’une des meilleures saisons pour visiter Ottawa, où le célèbre canal Rideau, triomphe historique d’ingénierie et site du patrimoine mondial de l’UNESCO, se transforme dans la plus grande patinoire du monde, avec des stands de nourriture et de location de patins sur glace et une atmosphère carnavalesque.</p>
@@ -104,10 +109,112 @@
 
         <section id="montreal" class="section-flex">
             <div class="article">
-                <h2>Montreal</h2>
+                <h2><a href="https://www.mtl.org/fr" target="_blank">Montreal</a></h2>
                 <p>En plein cœur de la ville trône le mont Royal, la vue de là-haut est époustouflante! Le belvédère Kondiaronk est l’endroit parfait où se prendre en photo : la ville entière se déploie sous nos pieds, avec le fleuve Saint-Laurent qui se la coule douce sous nos yeux. Le parc est vraiment l’endroit idéal où rencontrer les Montréalais « nature ».</p>
                 <p><br>En quête d’animation? C’est au Quartier des spectacles que ça se passe. Ce quadrilatère d’un kilomètre carré où se côtoient la Place des Arts, le Musée d’art contemporain et l’Opéra de Montréal accueille des événements, des spectacles, des installations artistiques et bien d’autres activités d’animation, hiver comme été, dans les rues fermées à la circulation routière.</p>
                 <p><br>A Montreal on appelle affectueusement « le Vieux » les quartiers du Vieux-Montréal et du Vieux-Port. Pas juste parce que les deux sont vieux, mais surtout parce qu’ils forment une entité unique pour les Montréalais. Malgré son grand âge, le Vieux se réinvente tout le temps : chaque année de nouvelles propositions d’activités viennent se blottir dans ses rues centenaires, à côté des bâtiments patrimoniaux.</p>
+            </div>
+        </section>
+
+        <section id="culinaire" class="section-flex">
+            <h2 id="title">Quelques Spécialités à ne pas louper...</h2>
+            <div class="plat">
+                <a href="#poutine"><img src="image/canada/culinaire/poutine.png" alt=""></a>
+                <div id="poutine" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>La poutine</h2>
+                        <p>Si vous êtes dans un circuit au Québec, vous serez agréablement surpris par cette nouvelle façon d’aborder les frites, un incontournable de la province, celle qu’on appelle La Poutine. Il s’agit d’un met québécois constitué de frites maison, de cheddar frais en grains et d’une sauce brune onctueuse dont seul le chef connaît le secret. Plusieurs variétés existent avec des ajouts différents (sauce fromage, champignons, etc.), mais la Poutine classique est, à elle seule, incontournable.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plat">
+                <a href="#tourtiere"><img src="image/canada/culinaire/tourtiere.jpg" alt=""></a>
+                <div id="tourtiere" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>La tourtière</h2>
+                        <p>La tourtière est un plat traditionnel servi lors des fêtes de fin d’année, à essayer également lors de votre voyage au Québec. Il s’agit d’une pâte à tarte fourrée de viande (porc, bœuf, poulet ou veau) mélangée à des épices variées et savoureuses, d’où son autre appellation « tarte à viande » ou « Meat Pie ». Son nom est inspiré de l’ustensile de cuisine où elle est préparée.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plat">
+                <a href="#bannock"><img src="image/canada/culinaire/bannock.jpg" alt=""></a>
+                <div id="bannock" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>Le pain Bannock</h2>
+                        <p>Le pain Bannock, appelé aussi bannique, est un genre de pain spécial du Canada à base de farine, de sel et d’eau, mais surtout qui est cuit sur les braises ou frit dans une poêle. Il est particulièrement apprécié pour accompagner la viande de gibier cuite au feu de bois. Son origine, croit-on, provient des premiers colons et des trappeurs.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plat">
+                <a href="#soupe"><img src="image/canada/culinaire/soupe.webp" alt=""></a>
+                <div id="soupe" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>La soupe aux pois</h2>
+                        <p>Si vous vous heurtez au dur froid du Canada, laissez-vous tenter par un plat traditionnel qui aspire au confort : la soupe aux pois canadienne. Aux origines incertaines, ce plat composé de pois jaunes, d’herbes et de viande de porc, existe depuis bien des siècles et continue de plaire. Quelques fois, on y découvre des morceaux de légumes selon les villes.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plat">
+                <a href="#cipaille"><img src="image/canada/culinaire/cipaille.jpg" alt=""></a>
+                <div id="cipaille" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>La cipaille</h2>
+                        <p>La cipaille du Quebec est une variante spécifique de la tourtière. À mi-chemin entre ragoût et tourte, la « Tourtière du Lac St Jean » diffère par sa pâte plus épaisse, par la présence de gros morceaux de viande variés et de bouillon. Elle se prépare dans un récipient plus profond et plus large qu’un ustensile à tourtière classique.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plat">
+                <a href="#paindeviande"><img src="image/canada/culinaire/paindeviande.webp" alt=""></a>
+                <div id="paindeviande" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>Le pain de viande</h2>
+                        <p>Pour surmonter les longues saisons de froid au Canada, il n’y a rien de mieux que de savourer quelques morceaux de pain de viande bien chauds. Pour le préparer, il suffit de mélanger : viande hachée, mie de pain, oignons, épices et œufs. Le tout est disposé dans un moule à pain et enfourné à 180° pendant quelques minutes.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plat">
+                <a href="#sirop"><img src="image/canada/culinaire/sirop.jpg" alt=""></a>
+                <div id="sirop" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>Le sirop d'érable</h2>
+                        <p>Il est presque gênant de parler d’un produit culte qui représente l’essence même du pays, le sirop d’érable. Extrait de la sève de l’érable à sucre, ce liquide est un élément naturel qui peut être savouré seul ou en accompagnement. Il est également utilisé dans la pâtisserie pour apporter du sucre naturel tout en restant dans un cadre healthy.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plat">
+                <a href="#bonbons"><img src="image/canada/culinaire/bonbons.jpg" alt=""></a>
+                <div id="bonbons" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>Les bonbons patate</h2>
+                        <p>Si vous pensiez que la pomme de terre ne pouvait pas être la base d’un bon dessert sucré, les bonbons patate sont une spécialité canadienne qui vous prouve le contraire ! Il s’agit de gâteaux à base de patate qui rappellent de près le roulé à l’orange.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plat">
+                <a href="#pacanes"><img src="image/canada/culinaire/pacanes.jpeg" alt=""></a>
+                <div id="pacanes" class="popupclass">
+                    <div>
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2>La tarte aux pacanes</h2>
+                        <p>La tarte aux pacanes est une tarte tout simplement à base de noix de pécan, des fruits secs très répandus en Amérique du Nord. Profitez de votre séjour au Canada pour déguster la tarte aux myrtilles, aux groseilles, aux canneberges ou encore aux framboises.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
