ajout des modifications main plus reglage des titre

--- a/index.html
+++ b/index.html
@@ -17,21 +17,20 @@
         <article>
             <section class="flex-header">
                 <div class="title-header">
-                    <img id="logo" src="img/logo.png" alt="Logo">
+                    <a href="index.html"><img  id="logo" src="img/logo.png" alt="Logo"></a>
                     <h1>A vol d'oiseaux</h1>
                 </div>
-                <a href="australie.html">Australie</a>
             </section>
         </article>
         <nav>
             <ul class="menu">
                 <li><a href="">Continents</a>
                     <ul class="sous-menu">
-                        <li><a href="">Amérique du Nord</a></li>
+                        <li><a href="canada.html">Amérique du Nord</a></li>
                         <li><a href="">Afrique </a></li>
                         <li><a href="">Europe</a></li>
                         <li><a href="">Asie</a></li>
-                        <li><a href="">Océanie</a></li>
+                        <li><a href="australie.html">Océanie</a></li>
                     </ul>
                 </li>
 
