--- a/australie.html
+++ b/australie.html
@@ -236,18 +236,55 @@
             </aside>
             </section>
         </article>
-        <!-- <article>
-            <section class="container">
-                <div class="wrapper">
-                    <img src="images/rue.jpg" alt="">
-                    <img src="images/plage.jpg" alt="">
-                    <img src="images/jardin.jpg" alt="">
-                    <img src="images/bibiothéques.jpg" alt="">
-                </div>
+        <article>
+            <section class="container-img">
+                 <!-- heading text -->
+                <ul class="image-gallery">
+                    <li>
+                        <img class="image-gallery" src="images/bibiothéques.jpg" alt="bibliotheques de melbourne" />
+                        <div class="overlay"><span>Bibliothéques de Melbourne</span></div>
+                    </li>
+                    <li>
+                        <img src="images/jardin.jpg" alt="jardin botaniques royaux de sydney" />
+                        <div class="overlay"><span>Jardins botaniques royaux de sydney</span></div>
+                    </li>
+                    <li>
+                        <img src="images//centre-commercial.jpg" alt="queen visctoria's building centre commercial" />
+                        <div class="overlay"><span>Centre commercial Queen Victoria's building</span></div>
+                    </li>
+                    <li>
+                        <img src="images/plage.jpg" alt="plage de sable blanc" />
+                        <div class="overlay"><span>Jervis Bay</span></div>
+                    </li>
+                    <li>
+                        <img src="images/rue.jpg" alt="nicholson street" />
+                        <div class="overlay"><span>Nicholson street, Fitzroy</span></div>
+                    </li>
+                    <li>
+                        <img src="images/beachroad.jpg" alt="beach road" />
+                        <div class="overlay"><span>Beach road Surfer's Paradise</span></div>
+                    </li>
+                    <li>
+                        <img src="images/operasydney.jpg" alt=" toit de l'opera de sydney" />
+                        <div class="overlay"><span>Toit de l'opéra de Sydney</span></div>
+                    </li>
+                    <li>
+                        <img src="images/bondibeach.jpg" alt="bbondi beach" />
+                        <div class="overlay"><span>Bondi Beach</span></div>
+                    </li>
+                    <li>
+                        <img src="images/greatoceanroad.jpg" alt="falaise great ocean road" />
+                        <div class="overlay"><span>Great ocean road</span></div>
+                    </li>
+                    <li>
+                        <img src="images/brisbane.jpg" alt="brisbane bridge of lights" />
+                        <div class="overlay"><span>Brisbane Bridge of Lights</span></div>
+                    </li>
+                </ul>
             </section>
-        </article> -->
+        </article>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="column" id="logo">
@@ -286,6 +323,6 @@
                 <li><a href=""><i class="fab fa-instagram"></i></a></li>
             </ul>
         </div>                   
-    </footer>
+    </footer> -->
 </body>
 </html>
