--- a/canada.html
+++ b/canada.html
@@ -145,7 +145,7 @@
                 <div id="bannock" class="popupclass">
                     <div>
                         <a href="#close" title="Close" class="close">X</a>
-                        <h2>Le pain Bannock</h2>
+                        <h2>Le Pain Bannock</h2>
                         <p>Le pain Bannock, appelé aussi bannique, est un genre de pain spécial du Canada à base de farine, de sel et d’eau, mais surtout qui est cuit sur les braises ou frit dans une poêle. Il est particulièrement apprécié pour accompagner la viande de gibier cuite au feu de bois. Son origine, croit-on, provient des premiers colons et des trappeurs.</p>
                     </div>
                 </div>
