--- a/japon.html
+++ b/japon.html
@@ -13,6 +13,14 @@
         <link rel="stylesheet" href="css/japon.css">
         <link rel="stylesheet" href="css/voyages.css">
         <title>Japon</title>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;500&display=swap" rel="stylesheet">
+    
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -103,7 +111,7 @@
 
                 <article class="ville">
 
-                    <h2>Une ville : Kyoto</h2>
+                    <h2>Kyoto</h2>
 
                     <p>Kyōto (littéralement « ville capitale ») est une ville japonaise de la région du Kansai, au centre de Honshū. Elle fut de 794 à 1868 la capitale impériale du Japon, sous le nom de Heian-kyō (« Capitale de la paix et de la tranquillité »). Elle est aujourd'hui, avec ses palais impériaux, ses milliers de sanctuaires shinto et de temples bouddhistes, le cœur culturel et religieux du pays. La ville est aussi la capitale de la préfecture de Kyoto ainsi que l'une des grandes villes de la zone métropolitaine Keihanshin.<br>
                         Considérée comme la capitale culturelle du Japon, elle héberge de nombreux sites classés au patrimoine mondial de l'Unesco.<br>
@@ -121,7 +129,7 @@
 
                 <article class="monument">
 
-                    <h2>Un monument : Le pavillon d'or de Kyoto</h2>
+                    <h2>Le pavillon d or de Kyoto</h2>
 
                     <p>L’incontournable pour un premier voyage dans la ville de Kyoto (elle fut l’ancienne capitale du Japon jusqu’en 1868) : dépaysement total.<br>
                         La demeure originale date de la fin du 14ème siècle et était la demeure du shogun Askikaga Yoshimitsu.<br>
@@ -133,13 +141,13 @@
 
                 <article class="paysage">
 
-                    <h2>Un paysage : Le mont fuji</h2>
+                    <h2>Le mont fuji</h2>
                     <p>Il n’est pas de montagne plus emblématique que le Mont Fuji, au Japon. Sa forme conique bien caractéristique est reconnaissable au premier coup d’œil. On lui confère une grande puissance et on trouve autant de mentions du fameux volcan dans les mythes fondateurs que dans le folklore populaire japonais. Saviez-vous, par exemple, que le Mont Fuji est habité par Sakuya-hime, déesse de la fragilité de la vie terrestre et de l’éclosion des fleurs ? Le Mont Fuji est aussi légendaire pour son panorama à 360° qu’aucune structure ne peut égaler. La Tokyo Skytree peut bien se targuer d’être la plus haute tour du Japon, elle est bien loin de faire le poids face au panorama incroyable qu’offre le sommet du Mont Fuji. S’il vous reste de l’énergie après l’ascension, prenez le temps de faire le tour du cratère. Vous pourrez déguster des soba chaudes en journée, faire un tour près du sanctuaire shinto ou juste vous reposer en admirant la vue. Quelle belle récompense !</p>
                 </article>
 
                 <article class="nourriture">
 
-                    <h2>Un plat : Le ramen</h2>
+                    <h2>Les ramen</h2>
                     <p>Mais qu’est-ce qu’un ramen ? Le ramen est à la base un plat de nouilles, accompagnées par une soupe qui donne le goût à celles-ci. C’est un élément incontournable de la gastronomie japonaise, qui a la particularité de se renouveler sans cesse depuis quelques décennies. Ce plat populaire, qui reste une façon simple et nourrissante de manger des nouilles, est à l’origine marqué par les traditions culinaires chinoises. Il se consomme dans les ports de commerce du Japon au milieu du XIXe siècle, préparé par des Chinois qui occupent à l’époque des emplois de dockers ou de cuisiniers. Au début du XXe siècle, en y ajoutant de la sauce soja et le dashi, les Japonais créent alors le ramen qui devient rapidement populaire. Après la Seconde Guerre mondiale, dans une quête de renouveau et avec l’apparition des nouilles instantanées, le ramen connaît un réel succès et se propage dans les îles du Japon. Il existe dès lors une grande variété de ramen et les ingrédients sont multiples et originaux selon les saisons et les terroirs, mais aussi selon les viandes que l’on utilise. Cette diversité et cet engouement autour du ramen fait naître une compétition nationale permanente, toujours positive, qui favorise le « kodawari », ce souci du détail qui fera la différence dans la composition et la création d’un ramen.</p>
                 </article>
             </section>
