--- a/canada.html
+++ b/canada.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Lora:ital,wght@1,600&family=Martel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/voyages.css">
     <link rel="stylesheet" href="css/canada.css">
-    <title>Document</title>
+    <title>Canada</title>
 </head>
 
 <body>
