--- a/japon.html
+++ b/japon.html
@@ -17,10 +17,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;500&display=swap" rel="stylesheet">
-    
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -153,6 +149,46 @@
             </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <div class="container bottom_border">
+                <div class="row">
+                    <div class="column" id="logo">
+                        <img src="images/logo_voyage.png">
+                    </div>
+                    <div class=" column">
+                        <h5 class="contact2">Contactez Nous</h5>
+                        <p class="expli_footer">Pour toutes Questions, vous pouvez nous contactez sur:</p>
+                        <p><i class="fa fa-location-arrow"></i> 35 Rue de Paris, 13002 Marseille </p>
+                        <p><i class="fa fa-phone"></i>  +33.6.35.69.90.01  </p>
+                        <p><i class="fa fa fa-envelope"></i> info@voyages.com  </p>
+                    </div>
+                    <div class=" column">
+                        <h5 class="contact2">Nos Services</h5>
+                        <ul class="nos_service">
+                            <li><a href="">Réservation d'hôtel</a></li>
+                            <li><a href="">Achat de billet</a></li>
+                            <li><a href="">Guide de voyage</a></li>
+                            <li><a href="">Top destinations</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <ul class="footer_fin">
+                    <li><a href="">acceuil</a></li>
+                    <li><a href="">Pays1</a></li>
+                    <li><a href="">Pays2</a></li>
+                    <li><a href="">Pays3</a></li>
+                    <li><a href="">Pays4</a></li>
+                    <li><a href="">Pays5</a></li>
+                </ul>
+                <ul class="social_media">
+                    <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>                   
+        </footer>
     </body>
 </html>
