galerie image +hover pasge fini

--- a/australie.html
+++ b/australie.html
@@ -9,14 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Lora:ital,wght@1,600&family=Martel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/australie.css" type="text/css">
+    <link rel="stylesheet" href="css/voyages.css">
     <title>Australie</title>
 </head>
 <body>
     <header>
         <article>
             <section class="flex-header">
-                <div class="title-header">
+                <div class="img-header">
                     <a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
+                </div>
+                <div class="title-header">
                     <h1>A vol d'oiseaux</h1>
                 </div>
             </section>
@@ -236,55 +239,63 @@
             </aside>
             </section>
         </article>
-        <article>
+        <article class="bg-img-australie">
             <section class="container-img">
                  <!-- heading text -->
                 <ul class="image-gallery">
                     <li>
-                        <img class="image-gallery" src="images/bibiothéques.jpg" alt="bibliotheques de melbourne" />
-                        <div class="overlay"><span>Bibliothéques de Melbourne</span></div>
+                        <img src="images/bibiothéques.jpg" alt="bibliotheques de melbourne" />
+                        <div class="overlay">Bibliothéques de Melbourne</div>
                     </li>
                     <li>
-                        <img src="images/jardin.jpg" alt="jardin botaniques royaux de sydney" />
-                        <div class="overlay"><span>Jardins botaniques royaux de sydney</span></div>
+                        <img class="image-gallery" src="images/jardin.jpg" alt="jardin botaniques royaux de sydney" />
+                        <div class="overlay">Jardins botaniques royaux de sydney</div>
                     </li>
                     <li>
                         <img src="images//centre-commercial.jpg" alt="queen visctoria's building centre commercial" />
-                        <div class="overlay"><span>Centre commercial Queen Victoria's building</span></div>
+                        <div class="overlay">Centre commercial Queen Victoria's building</div>
                     </li>
                     <li>
                         <img src="images/plage.jpg" alt="plage de sable blanc" />
-                        <div class="overlay"><span>Jervis Bay</span></div>
+                        <div class="overlay">Jervis Bay</div>
                     </li>
                     <li>
-                        <img src="images/rue.jpg" alt="nicholson street" />
-                        <div class="overlay"><span>Nicholson street, Fitzroy</span></div>
+                        <img class="" src="images/rue.jpg" alt="nicholson street" />
+                        <div class="overlay">Nicholson street, Fitzroy</div>
                     </li>
                     <li>
                         <img src="images/beachroad.jpg" alt="beach road" />
-                        <div class="overlay"><span>Beach road Surfer's Paradise</span></div>
+                        <div class="overlay">Beach road Surfer's Paradise</div>
                     </li>
                     <li>
                         <img src="images/operasydney.jpg" alt=" toit de l'opera de sydney" />
-                        <div class="overlay"><span>Toit de l'opéra de Sydney</span></div>
+                        <div class="overlay">Toit de l'opéra de Sydney</div>
                     </li>
                     <li>
                         <img src="images/bondibeach.jpg" alt="bbondi beach" />
-                        <div class="overlay"><span>Bondi Beach</span></div>
+                        <div class="overlay">Bondi Beach</div>
                     </li>
                     <li>
                         <img src="images/greatoceanroad.jpg" alt="falaise great ocean road" />
-                        <div class="overlay"><span>Great ocean road</span></div>
+                        <div class="overlay">Great ocean road</div>
                     </li>
                     <li>
                         <img src="images/brisbane.jpg" alt="brisbane bridge of lights" />
-                        <div class="overlay"><span>Brisbane Bridge of Lights</span></div>
+                        <div class="overlay">Brisbane Bridge of Lights</div>
+                    </li>
+                    <li>
+                        <img src="images/roue.jpg" alt="brisbane grande roue" />
+                        <div class="overlay">Wheel of Brisbane</div>
+                    </li>
+                    <li>
+                        <img src="images/queen_victoria_building.jpg" alt="batiment de la reine victoria" />
+                        <div class="overlay">Queen Victoria building</div>
                     </li>
                 </ul>
             </section>
         </article>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="column" id="logo">
@@ -323,6 +334,6 @@
                 <li><a href=""><i class="fab fa-instagram"></i></a></li>
             </ul>
         </div>                   
-    </footer> -->
+    </footer>
 </body>
 </html>
