--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,10 @@
     <header>
         <article>
             <section class="flex-header">
+                <div class="img-header">
+                    <a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
+                </div>
                 <div class="title-header">
-                    <a href="index.html"><img  id="logo" src="img/logo.png" alt="Logo"></a>
                     <h1>A vol d'oiseaux</h1>
                 </div>
             </section>
