--- a/canada.html
+++ b/canada.html
@@ -18,7 +18,7 @@
         <article>
             <section class="flex-header">
                 <div class="title-header">
-                    <img id="logo" src="img/logo.png" alt="Logo">
+                    <img id="logo" src="images/logo.png" alt="Logo">
                     <h1>A vol d'oiseaux</h1>
                 </div>
             </section>
@@ -223,7 +223,7 @@
         <div class="container">
             <div class="row">
                 <div class="column" id="logo">
-                    <img src="logo_voyage.png">
+                    <img src="images/logo_voyage.png">
                 </div>
                 <div class=" column">
                     <h5 class="contact2">Contactez Nous</h5>
